integration with BC estimation and payment